[gd_scene load_steps=11 format=3 uid="uid://bhlg1ko7p0n04"]

[ext_resource type="Script" path="res://Weapons/Gun.gd" id="1_ca7sk"]
[ext_resource type="AudioStream" uid="uid://vt0k87jj70ki" path="res://Audio/GunShot.wav" id="2_mjx14"]
[ext_resource type="Texture2D" uid="uid://4wrs3s2ay3yq" path="res://Textures/LaserDot.png" id="3_jtluq"]
[ext_resource type="Shader" path="res://Weapons/MuzzelFlash.gdshader" id="4_705qo"]
[ext_resource type="Texture2D" uid="uid://c1k57pily5rbv" path="res://Textures/new_noise_texture_2d.tres" id="4_clsd4"]

[sub_resource type="BoxMesh" id="BoxMesh_6i38o"]

[sub_resource type="Curve" id="Curve_rmd4k"]
_data = [Vector2(0, 0.2), 0.0, -0.683081, 0, 0, Vector2(0.0850277, 0.118182), 0.702597, 0.702597, 0, 0, Vector2(0.16451, 0.836364), 0.0, 0.0, 0, 0, Vector2(0.626617, 0.527273), 0.0, 0.0, 0, 0, Vector2(1, 0.309091), -8.28326, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_bidl8"]
curve = SubResource("Curve_rmd4k")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w7tyy"]
render_priority = 0
shader = ExtResource("4_705qo")
shader_parameter/albedo = Color(1, 0.701961, 0, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = Plane(1, 0, 0, 0)
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/emission = Color(0, 0, 0, 1)
shader_parameter/emission_energy = 1.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/flash_noise_weight = 9.422
shader_parameter/texture_albedo = ExtResource("4_clsd4")
shader_parameter/flash_profile = SubResource("CurveTexture_bidl8")

[sub_resource type="SphereMesh" id="SphereMesh_gqlxq"]
material = SubResource("ShaderMaterial_w7tyy")
uv2_padding = 0.0
radius = 0.081
height = 0.164

[node name="Node3D" type="Node3D"]
script = ExtResource("1_ca7sk")

[node name="GunSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mjx14")
volume_db = -4.0
max_polyphony = 5
bus = &"Loud"

[node name="ShotCooldownTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="GunMesh" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0486479, 0, 0, 0, 0.091791, 0, 0, 0, 0.530197, -2.75541e-06, -0.00208972, -0.464607)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0350818, 0, 0, 0, 0.0317454, 0.0135091, 0, -0.000868985, 0.493507, -2.75541e-06, 0.0463112, -0.471835)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0608162, 0, 0, 0, 0.047715, 0, 0, 0, 0.182669, -2.75541e-06, -0.0402919, -0.47856)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D12" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0608162, 0, 0, 0, 0.00812759, 0, 0, 0, 0.120581, -2.75541e-06, 0.0310476, -0.375729)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D14" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0608162, 0, 0, 0, 0.0278582, 0, 0, 0, 0.00931258, -2.75541e-06, 0.0211248, -0.320036)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D15" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0608162, 0, 0, 0, 0.0278582, 0, 0, 0, 0.00931258, -2.75541e-06, 0.0211248, -0.431679)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D13" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0608162, 0, 0, 0, 0.00812759, 0, 0, 0, 0.120581, -2.75541e-06, 0.0111652, -0.375729)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0553908, 0, 0, 0, -1.75337e-09, -0.196576, 0, 0.0401124, -8.5926e-09, 0.000410437, -0.0518571, -0.236484)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D17" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0462672, 0, 0, 0, -2.62481e-09, -0.173569, 0, 0.0600487, -7.58696e-09, -2.75541e-06, -0.126392, -0.357946)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D18" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.057332, 0, 0, 0, -2.9856e-09, -0.0445584, 0, 0.0683026, -1.94771e-09, -2.75541e-06, -0.0628842, -0.357946)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D19" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0162679, 0, 0, 0, -3.64243e-09, -0.00454613, 0, 0.0833291, -1.98718e-10, -2.75541e-06, -0.081618, -0.296414)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D11" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0128521, 0, 0, 0, -4.83933e-10, -0.0402724, 0, 0.0110711, -1.76036e-09, -2.75541e-06, -0.0553888, -0.291143)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0229893, 0, 0, 0, 0.0174511, 0, 0, 0, 0.0174511, -2.75541e-06, 0.0238321, -0.727104)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.00454009, 0, 0, 0, 0.0247662, 0.00211956, 0, -0.000930211, 0.0564319, -2.7554e-06, 0.0533804, -0.688855)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.00497228, 0, 0, 0, 0.0410077, 0.000979738, 0, -0.000715791, 0.0561292, -0.00922865, 0.0515333, -0.302)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D16" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.00497228, 0, 0, 0, 0.0410077, 0.000979738, 0, -0.000715791, 0.0561292, 0.00921436, 0.0515972, -0.302)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0272135, 0, 0, 0, 0.0258471, 0, 0, 0, 0.198824, 3.3336e-06, 0.0258001, -0.0987125)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0272135, 0, 0, 0, -1.12981e-09, -0.115411, 0, 0.0258471, -5.04478e-09, 3.3336e-06, -0.0403213, -0.0129262)
mesh = SubResource("BoxMesh_6i38o")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="GunMesh"]
transform = Transform3D(0.0272135, 0, 0, 0, 0.0266395, -0.0461565, 0, 0.00704244, 0.174597, 3.3336e-06, -0.0403213, -0.115375)
mesh = SubResource("BoxMesh_6i38o")

[node name="Bolt" type="Node3D" parent="GunMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.035, -0.592)

[node name="Mesh" type="MeshInstance3D" parent="GunMesh/Bolt"]
transform = Transform3D(0.0777275, 0, 0, 0, 0.00198145, 0, 0, 0, 0.00579028, 3.3336e-06, -0.00948155, 0.169479)
mesh = SubResource("BoxMesh_6i38o")
skeleton = NodePath("../..")

[node name="Mesh2" type="MeshInstance3D" parent="GunMesh/Bolt"]
transform = Transform3D(0.0777275, 0, 0, 0, 0.00198145, 0, 0, 0, 0.00579028, 3.3336e-06, -0.0176739, 0.169479)
mesh = SubResource("BoxMesh_6i38o")
skeleton = NodePath("../..")

[node name="Mesh3" type="MeshInstance3D" parent="GunMesh/Bolt"]
transform = Transform3D(-5.02657e-10, -0.0126645, 0, 0.0114994, -5.53585e-10, 0, 0, 0, 0.00685638, 0.0437854, -0.0135161, 0.169479)
mesh = SubResource("BoxMesh_6i38o")
skeleton = NodePath("../..")

[node name="Mesh4" type="MeshInstance3D" parent="GunMesh/Bolt"]
transform = Transform3D(-5.02657e-10, -0.0126645, 0, 0.0114994, -5.53585e-10, 0, 0, 0, 0.00685638, -0.044271, -0.0135161, 0.169479)
mesh = SubResource("BoxMesh_6i38o")
skeleton = NodePath("../..")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0241876, -0.741748)
visible = false
target_position = Vector3(0, -100, 0)

[node name="Decal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.024, -50.7)
extents = Vector3(0.02, 50, 0.02)
texture_emission = ExtResource("3_jtluq")
emission_energy = 128.0
normal_fade = 0.5
cull_mask = 1048573

[node name="MuzzelFlash" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.00020057, 0.023016, -0.926693)
visible = false
layers = 2
cast_shadow = 0
mesh = SubResource("SphereMesh_gqlxq")

[node name="FlashTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShotCooldownTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
